--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -50,15 +50,15 @@ h5 {
         text-shadow: -2px 2px 2px #000;
 
         &:hover {
-          color: #FF3366;
+          color: #FF6633;
         }
         
       }
     }
 
   .loghome {
-    height: 2.5%;
-    width: 2.5%;
+    height: auto;
+    width: 30px;
     margin-right: 10px;
   }
 
@@ -73,11 +73,6 @@ h5 {
     text-align: center;
     background: url('/assets/img/sourcecode2.jpg') no-repeat center fixed;
     background-size: cover;
-
-    .logo {
-      width: 7%;
-      margin-bottom: -3%;
-    }
 }
 
 
@@ -86,45 +81,54 @@ h5 {
   padding: 10% 0 10% 0;
   background: $mainColor;
   width: 60%;
+    
+    .logo {
+      width: 7%;
+      margin-bottom: -3%;
+    
+    .b-line {
+      margin: -1%;
+    }
+  }
 }
 
-.b-line {
-  margin: -1%;
-}
 
-/*Section About*/
+/* Section About */
 
-.text-about {
-  font-size: 2em;
-  font-weight: 100;
-}
-
-/*section 2 about*/
 .content-about {
   padding: 10% 10% 10% 10%;
   background: url('/assets/img/print-rollers.jpg') no-repeat center fixed;
   background-size: cover;
 }
-  /*texte about*/
-.content-about p {
-  font-size: 1.5em;
-  color: #fff;
-}
 
 .bg-overlay2 {
   margin: 5% 0 5% 20%;
-  background: rgba(0, 0, 0, 0.4);
-  padding: 20px;
+  background: $mainColor;
+  padding: 35px;
   width: 50%;
+    
+  /*texte about*/
+
+    .heading-about {
+      font-size: 2em;
+      color: white;
+    
+  }
+    .text-about {
+      font-size: 1.25em;
+      font-weight: 100;
+      color: #fff;
+  }
+    .icon {
+      height: 60px;
+      width: auto;
+      margin-left: -5px;
+    }
 }
 
-.heading-about {
-  font-size: 2em;
-  color: white;
-}
 
 
-/* Portfolio section*/
+/* Section Portfolio */
 .portfolism {
   color: black;
   background: url('/assets/img/web-print.jpg') no-repeat center fixed;
@@ -161,14 +165,16 @@ h5 {
   color: white;
   height: 308px;
 }
-/*Portfolio items*/
+
+/* Portfolio items */
 
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
   border: 1px outset rgba(255, 255, 255, 0.6);
 }
-/*ombre portee en hover sur les projets*/
+
+/* ombre portee en hover sur les projets */
 #portfolio .portfolio-item:hover {
   transition: 0.25s;
   box-shadow: -5px 5px 5px rgba(0,0,0,0.7);
@@ -246,13 +252,16 @@ h5 {
   box-shadow: -5px 5px 5px rgba(0,0,0,0.9);  
 }
 
+/* Section Contact */
+
 .contact-section {
-  padding: 26% 10% 6% 10%;
+  padding: 26% 10% 20% 10%;
   background: url('/assets/img/printing-eye.jpg') no-repeat center fixed;
   background-size: cover;
 }
 
 .bg-overlay4 {
+  border-radius: 1px;
   margin-top: -100px;
   padding: 10px 20px 20px 20px;
   background: rgba(0, 0, 0, 0.4);
@@ -265,7 +274,6 @@ h5 {
 }
 
 .contact-title {
-  margin-left: 2%;
   color: white;
 }
 
@@ -278,10 +286,44 @@ label {
   font-size: 1em;
   color: white;
   text-shadow: -1px 1px 1px rgba(0,0,0,0.3);
+  margin-bottom: -7px;
 }
 
-input, textarea {
+.zone {
   border: none;
+  border-radius: 2px;
+  padding: 5px;
+  margin: 15px;
+  box-shadow: -5px 5px 5px rgba(0,0,0,0.5);
+
+    &:hover {
+      box-shadow: -7px 7px 10px rgba(0, 0, 0, 0.45); /*ombre modifiée (plus floue et pluis écartée)*/
+      transform: scale(1.02);
+    }
+  }
+
+.send {
+  background-color: #03A9F4;
+  border: none;
+  border-radius: 2px;
+  box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-shadow: -1px 1px 1px rgba(0,0,0,0.3);
+  cursor: pointer;
+  font-size: 1em;
+  outline: none;
+  padding: 5px;
+  margin: 15px;
+  transition: 0.1s;
+
+    &:hover {
+      box-shadow: -7px 7px 10px rgba(0, 0, 0, 0.45); /*ombre modifiée (plus floue et pluis écartée)*/
+      transform: scale(1.02);
+    &:active {
+      box-shadow: -3px 3px 5px rgba(0, 0, 0, 0.6); /*ombre modifiée (plus dure et moins écartée)*/
+      transform: scale(0.99);
+    }
+  }
 }
 
 @media(max-width:1199px) {
@@ -298,6 +340,7 @@ input, textarea {
   }
 }
 
+/* Section Footer */
 
 footer {
   display: flex;
