--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -119,6 +119,13 @@ h5 {
       font-weight: 100;
       color: #fff;
   }
+    .text-about2 {
+      font-size: 1.25em;
+      font-weight: 600;
+      color: #fff;
+      margin-bottom: -20px;
+  }
+
     .icon {
       height: 60px;
       width: auto;
@@ -262,15 +269,11 @@ h5 {
 
 .bg-overlay4 {
   border-radius: 1px;
-  margin-top: -100px;
+  margin-top: -300px;
   padding: 10px 20px 20px 20px;
   background: rgba(0, 0, 0, 0.4);
   width: 20%;
   box-shadow: -5px 5px 5px rgba(0,0,0,0.7);
-}
-
-.contact-section ul {
-  margin-bottom: 0;
 }
 
 .contact-title {
@@ -286,14 +289,14 @@ label {
   font-size: 1em;
   color: white;
   text-shadow: -1px 1px 1px rgba(0,0,0,0.3);
-  margin-bottom: -7px;
+  margin-bottom: -1px;
 }
 
 .zone {
   border: none;
   border-radius: 2px;
   padding: 5px;
-  margin: 15px;
+  margin: 5px;
   box-shadow: -5px 5px 5px rgba(0,0,0,0.5);
 
     &:hover {
@@ -313,7 +316,7 @@ label {
   font-size: 1em;
   outline: none;
   padding: 5px;
-  margin: 15px;
+  margin: 5px;
   transition: 0.1s;
 
     &:hover {
