--- a/site/assets/css/app.css
+++ b/site/assets/css/app.css
@@ -82,6 +82,9 @@
 body, html {
   margin: 0;
   padding: 0;
+  font-family: "Nunito", sans-serif;
+  font-size: 1.1rem;
+  line-height: 1.6;
 }
 
 .me {
