--- a/site/assets/scss/_style.scss
+++ b/site/assets/scss/_style.scss
@@ -1,6 +1,9 @@
 body, html {
   margin: 0;
   padding: 0;
+  font-family: $font-family-sans-serif;
+  font-size: $font-size-base;
+  line-height: $line-height-base;
 }
 
 .me {
